# defect-inspection-digital-twin

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: SAMPLE_RESULTS.md
docs/report/: build_docx.js  build_pptx.js  make_figures.py  meeting_script.html  presentation.pptx  thesis.docx  thesis.html
notebooks/: colab_stage1.ipynb
stage1_vision/: README.md  __init__.py  config.py  dataset.py  gradcam.py  inference.py  model.py  train.py  utils.py
stage2_decision/: README.md  __init__.py  dashboard.py  digital_twin.py  grading.py  pipeline.py
stage3_ros2/: Dockerfile.ros2  README.md
stage3_ros2/ros2_ws/src/defect_inspection/: package.xml  setup.cfg  setup.py
stage3_ros2/ros2_ws/src/defect_inspection/defect_inspection/: __init__.py  _repo.py  camera_node.py  decision_node.py  digital_twin_node.py  inspection_node.py
stage3_ros2/ros2_ws/src/defect_inspection/launch/: inspection_cell.launch.py
stage3_ros2/ros2_ws/src/defect_inspection/rviz/: inspection.rviz
stage3_ros2/ros2_ws/src/defect_inspection/worlds/: inspection_cell.world
stage3_ros2/ros2_ws/src/defect_inspection_interfaces/: CMakeLists.txt  package.xml
stage3_ros2/ros2_ws/src/defect_inspection_interfaces/msg/: DetectionResult.msg  InspectionResult.msg
